--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,46 @@
-# Django
+annotated-types==0.6.0
+asgiref==3.7.2
+beautifulsoup4==4.12.3
+bleach==6.1.0
+boto3==1.34.25
+botocore==1.34.25
+certifi==2023.11.17
+charset-normalizer==3.3.2
+cloudinary==1.38.0
+dj-database-url==2.1.0
+dj3-cloudinary-storage==0.0.6
 Django==4.1.2
-python-decouple==3.6
-
-# Heroku
-#django-heroku==0.3.1
-#gunicorn==20.1.0
-
-# Imagens
-Pillow==9.2.0
-
-# QRcodes
-django-qr-code==3.1.1
-
-# WP API
-wordpress-api==1.2.9
-
-# AWS Storage
-#django-s3-folder-storage==0.5
-
-# Cloudinary
-#dj3-cloudinary-storage==0.0.6
-
-# Sentry
-#sentry-sdk==1.9.10
-
-# Admin Order
 django-admin-ordering==0.16.0
-
-# Code Editor
+django-heroku==0.3.1
+django-js-asset==2.2.0
+django-qr-code==3.1.1
+django-s3-folder-storage==0.5
+django-storages==1.14.2
 django-summernote==0.8.20.0
-
+gunicorn==20.1.0
+idna==3.6
+jmespath==1.0.1
+lxml==5.1.0
+oauthlib==3.2.2
+ordereddict==1.1
+Pillow==9.2.0
+psycopg2==2.9.9
+pydantic==2.5.3
+pydantic_core==2.14.6
+python-dateutil==2.8.2
+python-decouple==3.6
+pytz==2023.3.post1
+requests==2.31.0
+requests-oauthlib==1.3.1
+s3transfer==0.10.0
+segno==1.6.0
+sentry-sdk==1.9.10
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.4.4
+typing_extensions==4.9.0
+tzdata==2023.4
+urllib3==2.0.7
+webencodings==0.5.1
 whitenoise==6.6.0
+wordpress-api==1.2.9
